--- a/i18n/it/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/25.domains/25.domains.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/25.domains/25.domains.mdx
@@ -20,7 +20,7 @@ I domini possono essere configurati a partire dalla sezione 'Domini' della pagin
 <Tabs>
 <TabItem value="nohost" label="Yunohost's domains (the free and easy way)">
 
-Al fine di facillitare la gestione di un server, il progetto YunoHost fornisce un servizio di nomi di dominio *gratuiti* e *automaticamente configurati*. Utilizzando questo servizio, non dovrete [configurare i record DNS](/dns.config) operazione delicata e tecnica. Prendete atto del fatto che non sarete i veri proprietari del dominio scelto.
+Al fine di facillitare la gestione di un server, il progetto YunoHost fornisce un servizio di nomi di dominio *gratuiti* e *automaticamente configurati*. Utilizzando questo servizio, non dovrete [configurare i record DNS](/install/post_install/dns_config) operazione delicata e tecnica. Prendete atto del fatto che non sarete i veri proprietari del dominio scelto.
 
 Sono disponibili i seguenti (sotto) domini:
 
@@ -48,9 +48,9 @@ Possedere un proprio dominio comporta molti vantaggi:
 - maggiore controllo e maggiore autonomia
 - un nome più semplice e più chiaro (con il solo .net, .org, ecc dopo il nome del dominio).
 
-Avere un proprio dominio implica però dei costi (a partire da circa 15€ per anno...) e dovrete effettuare alcune [configurazioni sulla zona DNS](/dns.config). Lo strumento di diagnostica integrato in YunoHost, può esservi di aiuto nella configurazione dei record DNS.
+Avere un proprio dominio implica però dei costi (a partire da circa 15€ per anno...) e dovrete effettuare alcune [configurazioni sulla zona DNS](/install/post_install/dns_config). Lo strumento di diagnostica integrato in YunoHost, può esservi di aiuto nella configurazione dei record DNS.
 
-Se già possedete un nome di dominio, dovete semplicemente scegliere "Ho già un nome di dominio…". Nel caso non abbiate ancora un vostro dominio, vi suggeriamo di acquistarlo presso un registrar con [API supportate da YunoHost](/providers/registrar) semplificando così la configurazione del DNS.
+Se già possedete un nome di dominio, dovete semplicemente scegliere "Ho già un nome di dominio…". Nel caso non abbiate ancora un vostro dominio, vi suggeriamo di acquistarlo presso un registrar con [API supportate da YunoHost](/install/providers/registrar/) semplificando così la configurazione del DNS.
 
 ![Pagina "Aggiungere un dominio" dove potere scegliere "Ho già un nome di dominio"](/img/webadmin_domain_owndomain.png)
 
