--- a/i18n/it/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/60.security.md
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/60.security.md
@@ -11,11 +11,11 @@ Rimangono due punti importanti da notare:
 - Poiché YunoHost è un software molto conosciuto ed usato aumenta le possibilità di un attacco. Se viene scoperto un problema potrebbe essere usato contemporaneamente contro tutte le istanze. Mantenete **aggiornato** il vostro sistema per aumentare la sicurezza. Gli aggiornamenti possono essere automatizzati installando l'[applicazione "Unattended_upgrades"](https://install-app.yunohost.org/?app=unattended_upgrades).
 
 :::tip
-Se avete bisogno di aiuto non esitate a [chiedere](/help).
+Se avete bisogno di aiuto non esitate a [chiedere](/community/help).
 :::
 
 :::danger
-<FAIcon icon="fa-shield"/> Per discutere di problemi di sicurezza contattate il [team YunoHost security](/security_team).
+<FAIcon icon="fa-shield"/> Per discutere di problemi di sicurezza contattate il [team YunoHost security](/community/security_team).
  :::
 
 ---
