--- a/i18n/ca/docusaurus-plugin-content-docs/current/02.install/40.post_install/05.configuration.mdx
+++ b/i18n/ca/docusaurus-plugin-content-docs/current/02.install/40.post_install/05.configuration.mdx
@@ -9,7 +9,7 @@ import TabItem from '@theme/TabItem';
 ## <FAIcon icon="fa-cog"/> Proceed with the initial configuration
 
 :::tip
-If you are in the process of restoring a server using a YunoHost backup, you should skip this step and instead [restore the backup instead of the postinstall step](/backup#restoring-during-the-postinstall).
+If you are in the process of restoring a server using a YunoHost backup, you should skip this step and instead [restore the backup instead of the postinstall step](/administer/backups/#restoring-backups).
 :::
 
 :::note
