--- a/i18n/es/docusaurus-plugin-content-docs/current/02.install/index.mdx
+++ b/i18n/es/docusaurus-plugin-content-docs/current/02.install/index.mdx
@@ -78,7 +78,7 @@ export const styleDanger = {
     </tr>
     <tr>
       <td style={styleNone}>Possible ISP limitations</td>
-      <td style={styleDanger}>Yes<br/><small>(see <Link to="./providers/isps">here</Link>)</small></td>
+      <td style={styleDanger}>Yes<br/><small>(see <Link to="/install/providers/isp">here</Link>)</small></td>
       <td style={styleGood}>Bypassed by VPN</td>
       <td style={styleGood}>Typically no</td>
     </tr>
