--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/35.email_configure_relay.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/35.email_configure_relay.mdx
@@ -1,88 +1,83 @@
 ---
-title: Configure SMTP relay
+title: Configurer un relais SMTP
 ---
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-If your ISP blocks port 25, if you can't set a reverseDNS on your server, or if you have any other troubles using the built-in SMTP server on YunoHost, you may want to setup your YunoHost server to use an SMTP relay.
+Si votre fournisseur d'accès à Internet bloque le port 25, ou si vous rencontrez un problème d’utilisation du serveur SMTP natif de YunoHost, vous pouvez configurer votre serveur YunoHost pour utiliser un relais SMTP.
 
-## What is an SMTP relay?
+## Qu'est-ce qu'un relais SMTP
 
-An SMTP relay is basically a third party hosted SMTP server that will send emails on behalf of your own SMTP server (Postfix service on YunoHost).
-Once setup correctly on YunoHost, its operation is transparent, both for you and for your correspondents: they will see emails as coming from your YunoHost main URL, but all the sending will be delegated to the SMTP relay you have chosen and configured.
+C'est un serveur SMTP tiers qui va envoyer les e-mails aux destinataires à la place de votre propre serveur SMTP.
+Une fois correctement installé, le fonctionnement est transparent pour l’utilisateur. Vos correspondants verront vos e-mails comme s’ils venaient de votre propre serveur, mais ils seront passés par le relais SMTP que vous aurez choisis et configurés.
 
-## <FAIcon icon="fa-exclamation-triangle"/> Disadvantages of SMTP relays
+## <FAIcon icon="fa-exclamation-triangle"/>  Inconvénients des relais SMTP
 
-It's important to note that using an SMTP relay has to be seen as a (big) compromise in the world of self-hosting. Indeed, when using an SMTP relay, not only a third party sends emails on your behalf, but it has full access to the content of all the emails you'll send and can also possibly modify them (For example, by default, MailJet rewrites the html hyperlinks contained in your emails, in order to track the activity of your correspondents). Be also aware that an SMTP relay is setup for your whole YunoHost server: you can't choose which emails or which users go through it because all future emails will.
+Il est important de noter que dans le monde de l'auto-hébergement, utiliser un relais SMTP est un énorme compromis ! En effet, le relais SMTP sera non seulement capable d'envoyer les e-mails de votre part, mais il a également accès au contenu intégral de vos e-mails et peut éventuellement les modifier (Par exemple, par défaut, MailJet réécrit les hyperliens html contenus dans vos mails, afin de traquer l'activité de vos correspondants). Il faut également savoir qu'une fois mis en place, tout le trafic e-mail sortant de votre serveur passera par ce relais ; il n'est pas possible de choisir de l'utiliser ou pas selon l'expéditeur ou la destination.
 
-Beyond the privacy considerations above, an SMTP relay can impose technical limitations that one would not have if port 25 was open. For example, with most relays, if a user of your YunoHost server declares **an external "forwarding address"** in order to automatically forward messages received on your YunoHost server to another mailbox, **such forwarding will not work** for emails originating from outside your server, without any warning. Indeed, relays generally require that the messages they forward have a sender address from your domain (to fight spam and preserve the reputation of their services), which is not the case for an "automatic forward" where the original sender of the mail is kept; the message is then blocked by the relay (which, normally, warns your YunoHost admin, but only afterwards)
+Au-delà des considérations de confidentialité ci-dessus, un relais SMTP peut imposer des limitations techniques que l'on n'aurait pas si le port 25 était ouvert. Par exemple, avec la plupart des relais, si un utilisateur de votre serveur YunoHost déclare **une "adresse de transfert" extérieure** dans le but de transférer automatiquement les messages reçus sur votre serveur YunoHost vers une autre boîte mail, **ce transfert ne fonctionnera pas** pour les courriels venant de l'extérieur de votre serveur, sans qu'il soit en averti. En effet, les relais exigent généralement que les messages qu'ils transmettent aient une adresse d'expéditeur de votre domaine (pour lutter contre le spam et préserver la réputation de leurs services), ce qui n'est pas le cas pour un "forward automatique" où l'expéditeur originel du mail est conservé ; le message est alors bloqué par le relais (qui, normalement, prévient votre admin YunoHost, mais seulement après coup).
 
-## How to use an SMTP relay with YunoHost?
+## Comment utiliser un relais SMTP avec YunoHost ?
 
-YunoHost has a built-in SMTP relay configuration, available from version 4.1. That configuration is not yet available from the admin web interface, though. You will have to use the command line interface.
+YunoHost supporte depuis la version 4.1 la configuration d'un relais SMTP. Pour le moment cette fonctionnalité n'est pas accessible depuis l'interface d'administration : le paramétrage doit être fait en ligne de commande.
 
-### Step 1: Register with an SMTP relay provider
+### Étape 1 : S'inscrire chez un fournisseur de relais SMTP
 
-Many providers exist. Some have free plans with or without limitations, it's up to you. As written above, you have to be careful with your choice as you will basically handover all your emails to that third party. Whether you can trust it or not, that's your call!
+Beaucoup de fournisseurs existent dans ce domaine. Certains sont gratuits et d'autres proposent des services payants contre différentes options. Comme écrit plus haut, vous devez être sûr de pouvoir lui faire confiance, mais cela reste à votre entier égard.
 
-### Step 2: Setup your DNS records correctly
+### Étape 2 : Paramétrer sa zone DNS correctement
 
-Once registered, the SMTP relay provider will usually ask you to modify your DNS.
-Standard procedure is to add a DKIM key and a SPF key to your DNS records.
-The way to modify these records and the value of the keys you'll have to add depend both on your domain name provider and SMTP relay provider.
+Une fois inscrit, le paramétrage du relais SMTP demande de modifier la zone DNS de votre domaine. La procédure standard consiste à ajouter une clé DKIM, et SPF à la zone DNS. Les paramètres à modifier dépendent du fournisseur que vous aurez choisi.
 
-Usually, the SMTP relay provider will provide you with a guide on how to modify these records, together with an automatic check tool that will tell you when your DNS have been setup correctly. That step is mandatory to prove "the world" that you, owner of your domain name, did explicitly authorize your SMTP relay provider to send emails on your behalf.
-
-Please note that modifying your DNS records could sometimes take over 24h to take effect, so be patient!
-
+Habituellement les fournisseurs ont une documentation à ce sujet.
 :::warning
-<FAIcon icon="fa-exclamation-triangle"/> From now on, a non trusty SMTP relay provider could send emails from your main domain without telling you.
+<FAIcon icon="fa-exclamation-triangle"/>  Attention une fois la zone DNS enregistrée, le relais SMTP peut envoyer des e-mails à votre nom sans que vous ne le sachiez
 :::
 
-### Step 3: Setup YunoHost correctly
+### Étape 3 : Configurer YunoHost correctement
 
-It can be configured either from the webadmin or the command line.
+Il est possible de configurer soit via la webadmin ou en ligne de commande.
 
 <Tabs groupId="admin-commands">
   <TabItem value="web" label="From the web interface">
 
-Go to your web admin, in `Tools` > `Yunohost Settings` and `Email`.
-Now set all options requests :
+Depuis l'interface d'administration, dans la section `Outils` > `Paramètres de YunoHost`, et l'onglet `Email`.
+Il suffit d'activer l'option, et de renseigner les champs nécessaires :
 
-- **SMTP relay host** : SMTP server url.
-- **SMTP relay port** : Port use with the distant server.
-- **SMTP relay user** : Login or identification mail server.
-- **SMTP relay password** : Your SMTP relay password.
+- **Adresse du relais SMTP** : L'url pour le serveur SMTP.
+- **Port du relais SMTP** : Le port utilisé sur le serveur renseigné.
+- **Utilisateur du relais SMTP** : Login ou mail d'identification pour le serveur.
+- **Mot de passe du relais SMTP** : Tout simplement le mot de passe.
 
 :::warning
-<FAIcon icon="fa-exclamation-triangle"/> Password with `#` char won't works properly due to postfix limitation (it's possible other chars are forbidden, don't hesitate to report it to update this doc).
+<FAIcon icon="fa-exclamation-triangle"/>  Les mots de passe avec le caractère `#` ne fonctionneront pas proprement à cause d'une limitation de postfix (d'autres caractères sont peut-être interdit, n'hésitez pas à rapporter ce genre de cas pour la mise à jour de cette doc).
 :::
 
 ![Option-Relais-Smtp](/img/relay_smtp_option_webadmin_en.png)
 
     </TabItem>
   <TabItem value="cli" label="From the command line">
-In order to setup your YunoHost to use your SMTP relay, you will have to configure four things:
+Pour que YunoHost soit capable d'utiliser le relais, il faut paramétrer 4 choses.
 
-1. Your SMTP relay URL (for this tutorial we will use `smtprelay.tld`)
-2. The port on which you access the relay (for this tutorial we will use port 2525 below)
-3. Your SMTP relay username (for this tutorial we will use `username`)
-4. Your SMTP relay password (for this tutorial we will use `password`)
+1. Votre url de relais SMTP (on utilisera `smtprelay.tld`).
+2. Le port sur lequel on accède au relais (on utilisera le port 2525 ci-dessous)
+3. Votre nom d'utilisateur SMTP (on utilisera `username`).
+4. Votre mot de passe SMTP (on utilisera `password`).
 
 :::warning
-<FAIcon icon="fa-exclamation-triangle"/> Password with `#` char won't works properly due to postfix limitation (it's possible other chars are forbidden, don't hesitate to report it to update this doc).
+<FAIcon icon="fa-exclamation-triangle"/>  Les mots de passe avec le caractère `#` ne fonctionneront pas proprement à cause d'une limitation de postfix (d'autres caractères sont peut-être interdit, n'hésitez pas à rapporter ce genre de cas pour la mise à jour de cette doc).
 :::
 
-Your SMTP relay will obviously provide you with these four things, that should be available in your control panel or whatsoever.
+Le fournisseur SMTP vous fournit ces trois informations.
 
-You can log into your YunoHost server using SSH:
+Premièrement se connecter sur son serveur en SSH avec la commande :
 
 ```bash
-ssh admin@yourdomain.tld
+ssh admin@domain.tld
 ```
 
-Then you can update the three values as below:
+Ensuite, mettre à jour les informations suivantes :
 
 ```bash
 sudo yunohost settings set email.smtp.smtp_relay_enabled -v yes
@@ -92,7 +87,7 @@ sudo yunohost settings set smtp.relay.user -v username
 sudo yunohost settings set smtp.relay.password -v password
 ```
 
-It may be a good idea to double confirm your settings by doing:
+C'est une bonne idée de confirmer les informations en faisant :
 
 ```bash
 sudo yunohost settings list
@@ -101,22 +96,22 @@ sudo yunohost settings list
   </TabItem>
 </Tabs>
 
-Your SMTP relay is now configured!
+Votre relais SMTP est maintenant configuré !
 
 :::warning
-<FAIcon icon="fa-exclamation-triangle"/> From now on, a non trusty SMTP relay provider could read or use the data of all the emails you send without telling you (but still won't be able to read nor to use the data from emails you receive).
+<FAIcon icon="fa-exclamation-triangle"/>  Maintenant le relais SMTP est capable de lire et d'utiliser toutes les informations contenues dans les emails que vous envoyez sans votre accord. Mais il ne sera pas capable de lire les informations des emails que vous recevez.
 :::
 
-#### Relay all emails, even those from domains managed by YunoHost
+#### Relayer tous les emails même ceux des noms de domaines gérés par YunoHost
 
-If you have plenty of trust in your SMTP relay, have a second IMAP server that you wish or are forced to use instead of the YunoHost one, you can choose to relay all emails even those from domain names managed by YunoHost by commenting the following two lines in `/etc/postfix/main.cf` :
+Si vous avez une grande confiance dans votre relais SMTP, que vous avez un second serveur IMAP que vous souhaitez ou êtes contraint d'utiliser en lieu et place de celui de YunoHost, vous pouvez choisir de relayer tous les emails même ceux des noms de domaines gérés par YunoHost en commentant les deux ligne suivantes dans `/etc/postfix/main.cf` :
 
 ```text
 #virtual_mailbox_domains = ldap:/etc/postfix/ldap-domains.cf
 #virtual_alias_maps = ldap:/etc/postfix/ldap-aliases.cf,ldap:/etc/postfix/ldap-groups.cf
 ```
 
-### Step 4: Check your setup
+### Étape 4 : Vérifier la configuration
 
 You can check your setup by sending emails and try if everything works.
 Some of the SMTP relay will give you insights about the emails you send so that can also be a good way to check that everythings works as needed.
