--- a/i18n/it/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/35.email_configure_relay.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/35.email_configure_relay.mdx
@@ -1,88 +1,88 @@
 ---
-title: Configure SMTP relay
+title: Configurare un relay SMTP
 ---
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-If your ISP blocks port 25, if you can't set a reverseDNS on your server, or if you have any other troubles using the built-in SMTP server on YunoHost, you may want to setup your YunoHost server to use an SMTP relay.
+Se il vostro internet provider blocca la porta 25, o nel caso riscontriate dei problemi nell'uso del server SMTP nativo di YunoHost, potere configurare il vostro server YunoHost affinché utilizzi un relay SMTP.
 
-## What is an SMTP relay?
+## Cos'è un relay SMTP
 
-An SMTP relay is basically a third party hosted SMTP server that will send emails on behalf of your own SMTP server (Postfix service on YunoHost).
-Once setup correctly on YunoHost, its operation is transparent, both for you and for your correspondents: they will see emails as coming from your YunoHost main URL, but all the sending will be delegated to the SMTP relay you have chosen and configured.
+Si tratta di un server SMTP che si occupa dell'invio della posta elettronica in luogo del server SMTP locale (il servizio postfix di YunoHost).
+Una volta configurato correttamente l'utilizzo è trasparente per gli utenti e i vostri corrispondenti visualizzeranno i messaggi di posta, come se arrivassero dal vostro server YunoHost. In realtà sarà il server relay SMTP che si occuperà dell'invio.
 
-## <FAIcon icon="fa-exclamation-triangle"/> Disadvantages of SMTP relays
+## <FAIcon icon="fa-exclamation-triangle"/>  Svantaggi del server relay
 
-It's important to note that using an SMTP relay has to be seen as a (big) compromise in the world of self-hosting. Indeed, when using an SMTP relay, not only a third party sends emails on your behalf, but it has full access to the content of all the emails you'll send and can also possibly modify them (For example, by default, MailJet rewrites the html hyperlinks contained in your emails, in order to track the activity of your correspondents). Be also aware that an SMTP relay is setup for your whole YunoHost server: you can't choose which emails or which users go through it because all future emails will.
+È importante sottolineare che in un sistema di selfhosting, utilizzare un relay SMTP rappresenta un importante compromesso. In effetti non solo il RELAY SMTP sarà in grado di inviare le email per conto vostro, ma avrà accesso al contenuto e potrebbe anche modificarlo. (Ad esempio MailJet di default analizza i link HTML presenti nei messaggi per profilare l'attività degli utilizzatori del servizio.) Inoltre questa configurazione riguarderà tutto il server YunoHost: non sarà quindi possibile scegliere quale utente o quale indirizzo debba utilizzare il relay e quale no.
 
-Beyond the privacy considerations above, an SMTP relay can impose technical limitations that one would not have if port 25 was open. For example, with most relays, if a user of your YunoHost server declares **an external "forwarding address"** in order to automatically forward messages received on your YunoHost server to another mailbox, **such forwarding will not work** for emails originating from outside your server, without any warning. Indeed, relays generally require that the messages they forward have a sender address from your domain (to fight spam and preserve the reputation of their services), which is not the case for an "automatic forward" where the original sender of the mail is kept; the message is then blocked by the relay (which, normally, warns your YunoHost admin, but only afterwards)
+Oltre alle considerazioni sulla privacy discusse sopra, un relay SMTP può imporre dei limiti tecnici che non avremmo se la nostra porta 25 fosse aperta. Ad esempio, per la maggior parte dei server relay, se un utente del vostro server YunoHost imposta **un indirizzo di "reindirizzamento automatico"** delle mail ricevute, **questo non funzionerà** per i messaggi proveniente dall'esterno senza comunicare niente all'utente. Questo perché i relay richiedono, generalmente, che i messaggi che reinviano abbiano l'indirizzo di invio del vostro dominio (al fine di combattere lo spam e mantenere la reputazione del loro servizio), situazione che non si presenta in caso di "reindirizzamento automatico", dove l'indirizzo originale di spedizione viene conservato: il messaggio viene quindi bloccato dal relay (che normalmente, avvisa l'amministratore del server YunoHost).
 
-## How to use an SMTP relay with YunoHost?
+## Come utilizzare un relay SMTP con YunoHost?
 
-YunoHost has a built-in SMTP relay configuration, available from version 4.1. That configuration is not yet available from the admin web interface, though. You will have to use the command line interface.
+YunoHost supporta dalla versione 4.1 la configurazione di un relay SMTP. Al momento la configurazione non è disponibile dall'interfaccia di amministrazione ma solo da linea di comando.
 
-### Step 1: Register with an SMTP relay provider
+### Primo punto: creare un account presso un relay SMTP
 
-Many providers exist. Some have free plans with or without limitations, it's up to you. As written above, you have to be careful with your choice as you will basically handover all your emails to that third party. Whether you can trust it or not, that's your call!
+Esistono molti fornitori di relay SMTP. Alcuni sono gratuiti e altri propongono il servizio a pagamento in diverse opzioni. Come detto sopra, dovete essere sicuri di potervi fidare del provider, considerazione che spetta solo a voi.
 
-### Step 2: Setup your DNS records correctly
+### Secondo punto: Configurare correttamente i DNS
 
-Once registered, the SMTP relay provider will usually ask you to modify your DNS.
-Standard procedure is to add a DKIM key and a SPF key to your DNS records.
-The way to modify these records and the value of the keys you'll have to add depend both on your domain name provider and SMTP relay provider.
+Dopo aver creato l'account, le impostazioni del relay SMTP prevedono la modifica del DNS.
+La procedura normale, prevede l'aggiunta di una chiave DKIM e SPF al record DNS.
+I parametri da inserire e le modalità di modifica variano in base al fornitore dei servizi di DNS e relay SMTP che avete scelto.
 
-Usually, the SMTP relay provider will provide you with a guide on how to modify these records, together with an automatic check tool that will tell you when your DNS have been setup correctly. That step is mandatory to prove "the world" that you, owner of your domain name, did explicitly authorize your SMTP relay provider to send emails on your behalf.
+Normalmente i provider di relay SMTP forniscono le guide per modificare questi record insieme a programmi di controllo automatico della correttezza delle impostazioni del DNS. Questo passo è obbligatorio per assicurare "al mondo" che voi, gestori del vostro nome di dominio, autorizzate esplicitamente il vostro provider di relay SMTP ad inviare le email al vostro posto.  
 
-Please note that modifying your DNS records could sometimes take over 24h to take effect, so be patient!
+Notate che la modifica dei record DNS può avere effetto anche dopo 24 ore per cui siate pazienti!
 
 :::warning
-<FAIcon icon="fa-exclamation-triangle"/> From now on, a non trusty SMTP relay provider could send emails from your main domain without telling you.
+<FAIcon icon="fa-exclamation-triangle"/>  Attenzione! dopo aver registrato la zona DNS, il relay SMTP può inviare mail a nome vostro, senza avvisarvi.
 :::
 
-### Step 3: Setup YunoHost correctly
+### Terzo punto: configurare YunoHost
 
-It can be configured either from the webadmin or the command line.
+La configurazione può avvenire sia attraverso l'interfaccia web di amministrazione che da linea di comando.
 
 <Tabs groupId="admin-commands">
   <TabItem value="web" label="From the web interface">
 
-Go to your web admin, in `Tools` > `Yunohost Settings` and `Email`.
-Now set all options requests :
+Dalla pagina web di amministrazione scegliere `Strumenti` > `Impostazioni` e scegliere la scheda `Email`.
+Attivate l'opzione e compilate i campi necessari:
 
-- **SMTP relay host** : SMTP server url.
-- **SMTP relay port** : Port use with the distant server.
-- **SMTP relay user** : Login or identification mail server.
-- **SMTP relay password** : Your SMTP relay password.
+- **SMTP relay host** : l'indirizzo del server SMTP.
+- **SMTP relay port** : La porta utilizzata dal relay SMTP.
+- **SMTP relay user** : Utente del vostro account sul relay SMTP.
+- **SMTP relay password** : La password del vostro account sul relay SMTP.
 
 :::warning
-<FAIcon icon="fa-exclamation-triangle"/> Password with `#` char won't works properly due to postfix limitation (it's possible other chars are forbidden, don't hesitate to report it to update this doc).
+<FAIcon icon="fa-exclamation-triangle"/>  Le password contenenti il carattere `#` non funzioneranno correttamente a causa di una regola di postfix (altri caratteri potrebbero non essere riconosciuti, se li scoprite comunicatelo agli sviluppatori di YunoHost affiché possano aggiornare questa guida).
 :::
 
 ![Option-Relais-Smtp](/img/relay_smtp_option_webadmin_en.png)
 
     </TabItem>
   <TabItem value="cli" label="From the command line">
-In order to setup your YunoHost to use your SMTP relay, you will have to configure four things:
+Per configurare YunoHost per usare il relay, bisogna configurare questi quattro punti:
 
-1. Your SMTP relay URL (for this tutorial we will use `smtprelay.tld`)
-2. The port on which you access the relay (for this tutorial we will use port 2525 below)
-3. Your SMTP relay username (for this tutorial we will use `username`)
-4. Your SMTP relay password (for this tutorial we will use `password`)
+1. L'indirizzo del relay SMTP (per questo documento utilizzeremo `smtprelay.tld`)
+2. La porta che utilizzeremo per accedere al relay (per questo documento utilizzeremo la porta 2525)
+3. Il vostro nome utente SMTP (per questo documento utilizzeremo `username`)
+4. La password SMTP (per questo documento utilizzeremo password)
 
 :::warning
-<FAIcon icon="fa-exclamation-triangle"/> Password with `#` char won't works properly due to postfix limitation (it's possible other chars are forbidden, don't hesitate to report it to update this doc).
+<FAIcon icon="fa-exclamation-triangle"/>  Le password contenenti il carattere `#` non funzioneranno correttamente a causa di una regola di postfix (altri caratteri potrebbero non essere riconosciuti, se li scoprite comunicatelo agli sviluppatori di YunoHost affiché possano aggiornare questa guida).
 :::
 
-Your SMTP relay will obviously provide you with these four things, that should be available in your control panel or whatsoever.
+Questi parametri devono essere ovviamente forniti dal provider relay SMTP e dovrebbero trovarsi in un pannello di controllo o che altro.
 
-You can log into your YunoHost server using SSH:
+Per prima cosa colleghiamoci al proprio server via SSH:
 
 ```bash
-ssh admin@yourdomain.tld
+ssh admin@domain.tld
 ```
 
-Then you can update the three values as below:
+Aggiorniamo le impostazioni seguenti:
 
 ```bash
 sudo yunohost settings set email.smtp.smtp_relay_enabled -v yes
@@ -92,7 +92,7 @@ sudo yunohost settings set smtp.relay.user -v username
 sudo yunohost settings set smtp.relay.password -v password
 ```
 
-It may be a good idea to double confirm your settings by doing:
+Possiamo controllare le impostazioni con il comando:
 
 ```bash
 sudo yunohost settings list
@@ -101,10 +101,10 @@ sudo yunohost settings list
   </TabItem>
 </Tabs>
 
-Your SMTP relay is now configured!
+La configurazione del relay SMTP è terminata!
 
 :::warning
-<FAIcon icon="fa-exclamation-triangle"/> From now on, a non trusty SMTP relay provider could read or use the data of all the emails you send without telling you (but still won't be able to read nor to use the data from emails you receive).
+<FAIcon icon="fa-exclamation-triangle"/>  Da questo momento il relay SMTP è in grado di leggere e utilizzare le informazioni contenute nelle mail che inviate, senza il vostro consenso (Ma non sarà in grado di leggere le informazioni delle mail che riceverete).
 :::
 
 #### Relay all emails, even those from domains managed by YunoHost
